build/y.output
Terminals unused in grammar

    _PUBLIC
    _OPT
    _TX_LEVEL
    _RX_LEVEL


Grammar

    0 $accept: statement_list $end

    1 statement_list: statement _EOL
    2               | statement_list statement _EOL

    3 statement: %empty
    4          | label
    5          | directive
    6          | instruction_side
    7          | user_instruction_continue

    8 label: _SYMBOL _COLON

    9 directive: define_directive
   10          | program_directive
   11          | origen_directive
   12          | wrap_target_directive
   13          | wrap_directive
   14          | lang_opt_directive
   15          | word_directive
   16          | config_directive

   17 config_directive: _CONFIG config_statement

   18 config_statement: _PIO number
   19                 | _SM number
   20                 | _PIN_CONDITION number
   21                 | _SET_PINS number number
   22                 | _IN_PINS number number
   23                 | _OUT_PINS number number
   24                 | _SIDE_SET_PINS number number number number
   25                 | _SIDE_SET_COUNT number
   26                 | _SHIFTCTL_PULL_THRESH number
   27                 | _SHIFTCTL_PUSH_THRESH number
   28                 | _SHIFTCTL_OUT_SHIFTDIR number
   29                 | _SHIFTCTL_IN_SHIFTDIR number
   30                 | _AUTOPUSH
   31                 | _AUTOPULL
   32                 | _EXECCTRL_STATUS_SEL number number
   33                 | _USER_PROCESSOR number
   34                 | _RX_FIFO_MERGE number number
   35                 | _TX_FIFO_MERGE number number
   36                 | _VAR _SYMBOL

   37 define_directive: _DEFINE _SYMBOL expression

   38 program_directive: _PROGRAM _SYMBOL

   39 origen_directive: _ORIGEN expression

   40 wrap_target_directive: _WRAP_TARGET

   41 wrap_directive: _WRAP

   42 lang_opt_directive: _LANG_OPT _SYMBOL

   43 word_directive: _WORD expression

   44 instruction_side: instruction
   45                 | instruction _SIDE number
   46                 | instruction _DELAY
   47                 | instruction _SIDE number _DELAY

   48 instruction: jmp_instruction
   49            | nop_instruction
   50            | wait_instruction
   51            | in_instruction
   52            | out_instruction
   53            | push_instruction
   54            | pull_instruction
   55            | mov_instruction
   56            | irq_instruction
   57            | set_instruction

   58 user_instruction_continue: user_instruction_delay _CONTINUE_USER
   59                          | user_instruction_delay

   60 user_instruction_delay: user_instruction _DELAY
   61                       | user_instruction

   62 user_instruction: write_instruction
   63                 | read_instruction
   64                 | pin_instruction

   65 jmp_instruction: _JMP jmp_condition _SYMBOL

   66 jmp_condition: %empty
   67              | _NOT_X
   68              | _NOT_Y
   69              | _X_DECREMENT
   70              | _Y_DECREMENT
   71              | _X_NOT_EQUAL_Y
   72              | _PIN
   73              | _NOT_OSRE

   74 nop_instruction: _NOP

   75 wait_instruction: _WAIT polarity wait_source

   76 polarity: _BINARY_DIGIT

   77 wait_source: _GPIO index
   78            | _PIN index
   79            | _IRQ index relative

   80 index: expression

   81 relative: %empty
   82         | _RELATIVE

   83 in_instruction: _IN source expression

   84 source: _PINS
   85       | _X
   86       | _Y
   87       | _NULL
   88       | _ISR
   89       | _OSR
   90       | _STATUS

   91 out_instruction: _OUT destination expression

   92 destination: _PINS
   93            | _X
   94            | _Y
   95            | _NULL
   96            | _PINDIRS
   97            | _PC
   98            | _ISR
   99            | _OSR
  100            | _EXEC

  101 push_instruction: _PUSH iffull_block

  102 iffull_block: %empty
  103             | _IFFULL
  104             | _IFFULL _NOBLOCK
  105             | _IFFULL _BLOCK
  106             | _NOBLOCK
  107             | _BLOCK

  108 pull_instruction: _PULL ifempty_block

  109 ifempty_block: %empty
  110              | _IFEMPTY
  111              | _IFEMPTY _NOBLOCK
  112              | _IFEMPTY _BLOCK
  113              | _NOBLOCK
  114              | _BLOCK

  115 mov_instruction: _MOV destination operation source

  116 operation: %empty
  117          | _BANG
  118          | _COLON_COLON

  119 irq_instruction: _IRQ irq_operation number relative

  120 irq_operation: %empty
  121              | _SET
  122              | _NOWAIT
  123              | _WAIT
  124              | _CLEAR

  125 set_instruction: _SET destination expression

  126 write_instruction: _WRITE number

  127 read_instruction: _READ _SYMBOL

  128 pin_instruction: _PIN number _HIGH
  129                | _PIN number _LOW

  130 expression: expression '+' mulexp
  131           | expression '-' mulexp
  132           | mulexp

  133 mulexp: mulexp '*' primary
  134       | mulexp '/' primary
  135       | primary

  136 primary: '(' expression ')'
  137        | '-' primary
  138        | number

  139 number: _BINARY_DIGIT
  140       | _BINARY_NUMBER
  141       | _HEX_NUMBER
  142       | _DECIMAL_NUMBER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 136
    ')' (41) 136
    '*' (42) 133
    '+' (43) 130
    '-' (45) 131 137
    '/' (47) 134
    error (256)
    _DEFINE (258) 37
    _PROGRAM (259) 38
    _ORIGEN (260) 39
    _WRAP_TARGET (261) 40
    _WRAP (262) 41
    _LANG_OPT (263) 42
    _WORD (264) 43
    _JMP (265) 65
    _NOP (266) 74
    _WAIT (267) 75 123
    _IN (268) 83
    _OUT (269) 91
    _PUSH (270) 101
    _PULL (271) 108
    _MOV (272) 115
    _SET (273) 121 125
    _PUBLIC (274)
    _OPT (275)
    _GPIO (276) 77
    _IRQ (277) 79 119
    _NOT_X (278) 67
    _NOT_Y (279) 68
    _X_DECREMENT (280) 69
    _Y_DECREMENT (281) 70
    _X_NOT_EQUAL_Y (282) 71
    _PIN (283) 72 78 128 129
    _NOT_OSRE (284) 73
    _SIDE (285) 45 47
    _EOL (286) 1 2
    _PINS (287) 84 92
    _PINDIRS (288) 96
    _X (289) 85 93
    _Y (290) 86 94
    _NULL (291) 87 95
    _ISR (292) 88 98
    _OSR (293) 89 99
    _PC (294) 97
    _EXEC (295) 100
    _IFFULL (296) 103 104 105
    _IFEMPTY (297) 110 111 112
    _BLOCK (298) 105 107 112 114
    _NOBLOCK (299) 104 106 111 113
    _CLEAR (300) 124
    _NOWAIT (301) 122
    _RELATIVE (302) 82
    _STATUS (303) 90
    _AUTOPUSH (304) 30
    _AUTOPULL (305) 31
    _BANG (306) 117
    _COLON (307) 8
    _COLON_COLON (308) 118
    _CONFIG (309) 17
    _PIO (310) 18
    _SM (311) 19
    _PIN_CONDITION (312) 20
    _SET_PINS (313) 21
    _IN_PINS (314) 22
    _OUT_PINS (315) 23
    _SIDE_SET_PINS (316) 24
    _SIDE_SET_COUNT (317) 25
    _USER_PROCESSOR (318) 33
    _RX_FIFO_MERGE (319) 34
    _TX_FIFO_MERGE (320) 35
    _SHIFTCTL_PULL_THRESH (321) 26
    _SHIFTCTL_PUSH_THRESH (322) 27
    _SHIFTCTL_OUT_SHIFTDIR (323) 28
    _SHIFTCTL_IN_SHIFTDIR (324) 29
    _BINARY_DIGIT <ival> (325) 76 139
    _HEX_NUMBER <ival> (326) 141
    _BINARY_NUMBER <ival> (327) 140
    _DECIMAL_NUMBER <ival> (328) 142
    _DELAY <ival> (329) 46 47 60
    _SYMBOL <sval> (330) 8 36 37 38 42 65 127
    _EXECCTRL_STATUS_SEL (331) 32
    _TX_LEVEL (332)
    _RX_LEVEL (333)
    _WRITE (334) 126
    _READ (335) 127
    _VAR (336) 36
    _HIGH (337) 128
    _LOW (338) 129
    _CONTINUE_USER (339) 58


Nonterminals, with rules where they appear

    $accept (91)
        on left: 0
    statement_list (92)
        on left: 1 2
        on right: 0 2
    statement (93)
        on left: 3 4 5 6 7
        on right: 1 2
    label (94)
        on left: 8
        on right: 4
    directive (95)
        on left: 9 10 11 12 13 14 15 16
        on right: 5
    config_directive (96)
        on left: 17
        on right: 16
    config_statement (97)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
        on right: 17
    define_directive (98)
        on left: 37
        on right: 9
    program_directive (99)
        on left: 38
        on right: 10
    origen_directive (100)
        on left: 39
        on right: 11
    wrap_target_directive (101)
        on left: 40
        on right: 12
    wrap_directive (102)
        on left: 41
        on right: 13
    lang_opt_directive (103)
        on left: 42
        on right: 14
    word_directive (104)
        on left: 43
        on right: 15
    instruction_side (105)
        on left: 44 45 46 47
        on right: 6
    instruction (106)
        on left: 48 49 50 51 52 53 54 55 56 57
        on right: 44 45 46 47
    user_instruction_continue (107)
        on left: 58 59
        on right: 7
    user_instruction_delay (108)
        on left: 60 61
        on right: 58 59
    user_instruction (109)
        on left: 62 63 64
        on right: 60 61
    jmp_instruction (110)
        on left: 65
        on right: 48
    jmp_condition (111)
        on left: 66 67 68 69 70 71 72 73
        on right: 65
    nop_instruction (112)
        on left: 74
        on right: 49
    wait_instruction (113)
        on left: 75
        on right: 50
    polarity (114)
        on left: 76
        on right: 75
    wait_source (115)
        on left: 77 78 79
        on right: 75
    index (116)
        on left: 80
        on right: 77 78 79
    relative (117)
        on left: 81 82
        on right: 79 119
    in_instruction (118)
        on left: 83
        on right: 51
    source (119)
        on left: 84 85 86 87 88 89 90
        on right: 83 115
    out_instruction (120)
        on left: 91
        on right: 52
    destination (121)
        on left: 92 93 94 95 96 97 98 99 100
        on right: 91 115 125
    push_instruction (122)
        on left: 101
        on right: 53
    iffull_block (123)
        on left: 102 103 104 105 106 107
        on right: 101
    pull_instruction (124)
        on left: 108
        on right: 54
    ifempty_block (125)
        on left: 109 110 111 112 113 114
        on right: 108
    mov_instruction (126)
        on left: 115
        on right: 55
    operation (127)
        on left: 116 117 118
        on right: 115
    irq_instruction (128)
        on left: 119
        on right: 56
    irq_operation (129)
        on left: 120 121 122 123 124
        on right: 119
    set_instruction (130)
        on left: 125
        on right: 57
    write_instruction (131)
        on left: 126
        on right: 62
    read_instruction (132)
        on left: 127
        on right: 63
    pin_instruction (133)
        on left: 128 129
        on right: 64
    expression <ival> (134)
        on left: 130 131 132
        on right: 37 39 43 80 83 91 125 130 131 136
    mulexp <ival> (135)
        on left: 133 134 135
        on right: 130 131 132 133 134
    primary <ival> (136)
        on left: 136 137 138
        on right: 133 134 135 137
    number <ival> (137)
        on left: 139 140 141 142
        on right: 18 19 20 21 22 23 24 25 26 27 28 29 32 33 34 35 45 47 119 126 128 129 138


State 0

    0 $accept: . statement_list $end

    _DEFINE       shift, and go to state 1
    _PROGRAM      shift, and go to state 2
    _ORIGEN       shift, and go to state 3
    _WRAP_TARGET  shift, and go to state 4
    _WRAP         shift, and go to state 5
    _LANG_OPT     shift, and go to state 6
    _WORD         shift, and go to state 7
    _JMP          shift, and go to state 8
    _NOP          shift, and go to state 9
    _WAIT         shift, and go to state 10
    _IN           shift, and go to state 11
    _OUT          shift, and go to state 12
    _PUSH         shift, and go to state 13
    _PULL         shift, and go to state 14
    _MOV          shift, and go to state 15
    _SET          shift, and go to state 16
    _IRQ          shift, and go to state 17
    _PIN          shift, and go to state 18
    _CONFIG       shift, and go to state 19
    _SYMBOL       shift, and go to state 20
    _WRITE        shift, and go to state 21
    _READ         shift, and go to state 22

    $default  reduce using rule 3 (statement)

    statement_list             go to state 23
    statement                  go to state 24
    label                      go to state 25
    directive                  go to state 26
    config_directive           go to state 27
    define_directive           go to state 28
    program_directive          go to state 29
    origen_directive           go to state 30
    wrap_target_directive      go to state 31
    wrap_directive             go to state 32
    lang_opt_directive         go to state 33
    word_directive             go to state 34
    instruction_side           go to state 35
    instruction                go to state 36
    user_instruction_continue  go to state 37
    user_instruction_delay     go to state 38
    user_instruction           go to state 39
    jmp_instruction            go to state 40
    nop_instruction            go to state 41
    wait_instruction           go to state 42
    in_instruction             go to state 43
    out_instruction            go to state 44
    push_instruction           go to state 45
    pull_instruction           go to state 46
    mov_instruction            go to state 47
    irq_instruction            go to state 48
    set_instruction            go to state 49
    write_instruction          go to state 50
    read_instruction           go to state 51
    pin_instruction            go to state 52


State 1

   37 define_directive: _DEFINE . _SYMBOL expression

    _SYMBOL  shift, and go to state 53


State 2

   38 program_directive: _PROGRAM . _SYMBOL

    _SYMBOL  shift, and go to state 54


State 3

   39 origen_directive: _ORIGEN . expression

    _BINARY_DIGIT    shift, and go to state 55
    _HEX_NUMBER      shift, and go to state 56
    _BINARY_NUMBER   shift, and go to state 57
    _DECIMAL_NUMBER  shift, and go to state 58
    '-'              shift, and go to state 59
    '('              shift, and go to state 60

    expression  go to state 61
    mulexp      go to state 62
    primary     go to state 63
    number      go to state 64


State 4

   40 wrap_target_directive: _WRAP_TARGET .

    $default  reduce using rule 40 (wrap_target_directive)


State 5

   41 wrap_directive: _WRAP .

    $default  reduce using rule 41 (wrap_directive)


State 6

   42 lang_opt_directive: _LANG_OPT . _SYMBOL

    _SYMBOL  shift, and go to state 65


State 7

   43 word_directive: _WORD . expression

    _BINARY_DIGIT    shift, and go to state 55
    _HEX_NUMBER      shift, and go to state 56
    _BINARY_NUMBER   shift, and go to state 57
    _DECIMAL_NUMBER  shift, and go to state 58
    '-'              shift, and go to state 59
    '('              shift, and go to state 60

    expression  go to state 66
    mulexp      go to state 62
    primary     go to state 63
    number      go to state 64


State 8

   65 jmp_instruction: _JMP . jmp_condition _SYMBOL

    _NOT_X          shift, and go to state 67
    _NOT_Y          shift, and go to state 68
    _X_DECREMENT    shift, and go to state 69
    _Y_DECREMENT    shift, and go to state 70
    _X_NOT_EQUAL_Y  shift, and go to state 71
    _PIN            shift, and go to state 72
    _NOT_OSRE       shift, and go to state 73

    $default  reduce using rule 66 (jmp_condition)

    jmp_condition  go to state 74


State 9

   74 nop_instruction: _NOP .

    $default  reduce using rule 74 (nop_instruction)


State 10

   75 wait_instruction: _WAIT . polarity wait_source

    _BINARY_DIGIT  shift, and go to state 75

    polarity  go to state 76


State 11

   83 in_instruction: _IN . source expression

    _PINS    shift, and go to state 77
    _X       shift, and go to state 78
    _Y       shift, and go to state 79
    _NULL    shift, and go to state 80
    _ISR     shift, and go to state 81
    _OSR     shift, and go to state 82
    _STATUS  shift, and go to state 83

    source  go to state 84


State 12

   91 out_instruction: _OUT . destination expression

    _PINS     shift, and go to state 85
    _PINDIRS  shift, and go to state 86
    _X        shift, and go to state 87
    _Y        shift, and go to state 88
    _NULL     shift, and go to state 89
    _ISR      shift, and go to state 90
    _OSR      shift, and go to state 91
    _PC       shift, and go to state 92
    _EXEC     shift, and go to state 93

    destination  go to state 94


State 13

  101 push_instruction: _PUSH . iffull_block

    _IFFULL   shift, and go to state 95
    _BLOCK    shift, and go to state 96
    _NOBLOCK  shift, and go to state 97

    $default  reduce using rule 102 (iffull_block)

    iffull_block  go to state 98


State 14

  108 pull_instruction: _PULL . ifempty_block

    _IFEMPTY  shift, and go to state 99
    _BLOCK    shift, and go to state 100
    _NOBLOCK  shift, and go to state 101

    $default  reduce using rule 109 (ifempty_block)

    ifempty_block  go to state 102


State 15

  115 mov_instruction: _MOV . destination operation source

    _PINS     shift, and go to state 85
    _PINDIRS  shift, and go to state 86
    _X        shift, and go to state 87
    _Y        shift, and go to state 88
    _NULL     shift, and go to state 89
    _ISR      shift, and go to state 90
    _OSR      shift, and go to state 91
    _PC       shift, and go to state 92
    _EXEC     shift, and go to state 93

    destination  go to state 103


State 16

  125 set_instruction: _SET . destination expression

    _PINS     shift, and go to state 85
    _PINDIRS  shift, and go to state 86
    _X        shift, and go to state 87
    _Y        shift, and go to state 88
    _NULL     shift, and go to state 89
    _ISR      shift, and go to state 90
    _OSR      shift, and go to state 91
    _PC       shift, and go to state 92
    _EXEC     shift, and go to state 93

    destination  go to state 104


State 17

  119 irq_instruction: _IRQ . irq_operation number relative

    _WAIT    shift, and go to state 105
    _SET     shift, and go to state 106
    _CLEAR   shift, and go to state 107
    _NOWAIT  shift, and go to state 108

    $default  reduce using rule 120 (irq_operation)

    irq_operation  go to state 109


State 18

  128 pin_instruction: _PIN . number _HIGH
  129                | _PIN . number _LOW

    _BINARY_DIGIT    shift, and go to state 55
    _HEX_NUMBER      shift, and go to state 56
    _BINARY_NUMBER   shift, and go to state 57
    _DECIMAL_NUMBER  shift, and go to state 58

    number  go to state 110


State 19

   17 config_directive: _CONFIG . config_statement

    _AUTOPUSH               shift, and go to state 111
    _AUTOPULL               shift, and go to state 112
    _PIO                    shift, and go to state 113
    _SM                     shift, and go to state 114
    _PIN_CONDITION          shift, and go to state 115
    _SET_PINS               shift, and go to state 116
    _IN_PINS                shift, and go to state 117
    _OUT_PINS               shift, and go to state 118
    _SIDE_SET_PINS          shift, and go to state 119
    _SIDE_SET_COUNT         shift, and go to state 120
    _USER_PROCESSOR         shift, and go to state 121
    _RX_FIFO_MERGE          shift, and go to state 122
    _TX_FIFO_MERGE          shift, and go to state 123
    _SHIFTCTL_PULL_THRESH   shift, and go to state 124
    _SHIFTCTL_PUSH_THRESH   shift, and go to state 125
    _SHIFTCTL_OUT_SHIFTDIR  shift, and go to state 126
    _SHIFTCTL_IN_SHIFTDIR   shift, and go to state 127
    _EXECCTRL_STATUS_SEL    shift, and go to state 128
    _VAR                    shift, and go to state 129

    config_statement  go to state 130


State 20

    8 label: _SYMBOL . _COLON

    _COLON  shift, and go to state 131


State 21

  126 write_instruction: _WRITE . number

    _BINARY_DIGIT    shift, and go to state 55
    _HEX_NUMBER      shift, and go to state 56
    _BINARY_NUMBER   shift, and go to state 57
    _DECIMAL_NUMBER  shift, and go to state 58

    number  go to state 132


State 22

  127 read_instruction: _READ . _SYMBOL

    _SYMBOL  shift, and go to state 133


State 23

    0 $accept: statement_list . $end
    2 statement_list: statement_list . statement _EOL
